--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
-	<link rel="shortcut icon" href="assets/images/rmit-favicon.png" type="image/x-icon" class="ico">
+	<link rel="shortcut icon" href="/assets/images/rmit-favicon.png" type="image/x-icon" class="ico">
 </head>
 <body>
 	<header>
-		<div role="banner"><img src="assets/images/rmit-store-logo.png" alt=""></div>
+		<div role="banner"><img src="/assets/images/rmit-store-logo.png" alt=""></div>
 		<nav></nav>
 	</header>
 	<main>
-		<section>Store</section>
+		<section>Our Store</section>
+		<img src="/assets/images/rmit-store-logo.png" alt="logo"/>
 		<section>About</section>
 	</main>
 	<footer>
