--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Document</title>
-	<link rel="shortcut icon" href="/assets/images/rmit-favicon.png" type="image/x-icon" class="ico">
-</head>
-<body>
-	<header>
-		<div role="banner"><img src="/assets/images/rmit-store-logo.png" alt=""></div>
-		<nav></nav>
-	</header>
-	<main>
-		<section>Our Store</section>
-		<img src="/assets/images/rmit-store-logo.png" alt="logo"/>
-		<section>About</section>
-	</main>
-	<footer>
-
-	</footer>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Document</title>
+		<link
+			rel="shortcut icon"
+			href="/assets/images/rmit-favicon.png"
+			type="image/x-icon"
+			class="ico"
+		/>
+	</head>
+	<body>
+		<header>
+			<div role="banner">
+				<img src="/assets/images/rmit-store-logo.png" alt="" />
+			</div>
+			<nav></nav>
+		</header>
+		<main>
+			<section>Our Store</section>
+			<img src="/assets/images/rmit-store-logo.png" alt="logo" />
+			<section>About</section>
+		</main>
+		<footer></footer>
+	</body>
 </html>
